--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,13 @@ php:
   # using major version aliases
 
   # aliased to a recent 5.4.x version
-  - 5.4
+#  - 5.4
   # aliased to a recent 5.5.x version
   - 5.5
   # aliased to a recent 5.6.x version
-  - 5.6
+#  - 5.6
   # aliased to a recent 7.x version
-  - 7.0
-  # aliased to a recent hhvm version
-  - hhvm
+#  - 7.0
 
 # optionally specify a list of environments, for example to test different RDBMS
 env:
@@ -23,6 +21,8 @@ env:
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
   - if [[ "$DB" == "mysql" ]]; then mysql -e "CREATE DATABASE IF NOT EXISTS churchcrm CHARACTER SET utf8;" -uroot; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "CREATE USER 'churchcrm'@'churchcrm' IDENTIFIED BY 'churchcrm';" -uroot; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "GRANT ALL PRIVILEGES ON churchcrm.* TO 'churchcrm'@'churchcrm' WITH GRANT OPTION;" -uroot; fi
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
