--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,14 @@ php:
   # aliased to a recent 7.x version
 #  - 7.0
 
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/3f2dee1a025739ac5da7
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
 # optionally specify a list of environments, for example to test different RDBMS
 env:
   - DB=mysql
