--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ env:
 
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
-  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS churchcrm;" -uroot; fi
-
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS churchcrm_test;" -uroot; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < ./mysql/install/Install.sql;" -uroot; fi
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 script: phpunit --configuration phpunit_$DB.xml --coverage-text
