--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ before_script:
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 script: 
-  - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < mysql/install/Install.sql;" -uroot; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < ./mysql/install/Install.sql;" -uroot; fi
   - phpunit --configuration phpunit_$DB.xml --coverage-text
 
