--- a/churchinfo/composer.json
+++ b/churchinfo/composer.json
@@ -25,6 +25,7 @@
   },
   "require": {
     "almasaeed2010/adminlte": "2.3.2",
-    "mailchimp/mailchimp": ">=2.0.0"
+    "mailchimp/mailchimp": "2.0.6",
+    "slim/slim": "2.6.2"
   }
 }
