--- a/churchinfo/composer.json
+++ b/churchinfo/composer.json
@@ -26,8 +26,6 @@
   "require": {
     "almasaeed2010/adminlte": "2.3.2",
     "mailchimp/mailchimp": "2.0.6",
-    "slim/slim": "2.6.2",
-    "driftyco/ionicons": "2.0.1",
-    "components/font-awesome": "4.5.0"
+    "slim/slim": "2.6.2"
   }
 }
