--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,7 @@ before_script:
 script: 
   - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < ./churchinfo/mysql/install/Install.sql -uroot; fi
   - tests/LineEndings.sh
+  - tests/TrailingWhiteSpace.sh
+  - tests/TabIndentation.sh
   - phpunit --configuration phpunit_$DB.xml --coverage-text
 
