use sass to compile css

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ churchinfo/vendor/almasaeed2010/adminlte/pages/
 # Uploaded Images
 churchinfo/Images/Family/thumbnails/
 churchinfo/Images/Person/thumbnails/
+
+# SASS
+.sass-cache
