--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM tutum/lamp:latest
 MAINTAINER George Dawoud <george@dawouds.com>
 
-# Download latest version of ChurchInfo into /app
+# Download latest version of ChurchCRM into /app
 RUN rm -fr /app && git clone https://github.com/ChurchCRM/CRM.git /app
 
 # Add database setup script
