--- a/vagrant/1.2.14 Resources/Vagrantfile
+++ b/vagrant/1.2.14 Resources/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "scotch/box"
   config.vm.network "private_network", ip: "192.168.33.11"
   config.vm.hostname = "scotchbox"
-  config.vm.synced_folder "churchinfo", "/var/www/public", :mount_options => ["dmode=777", "fmode=666"]
+  config.vm.synced_folder "src", "/var/www/public", :mount_options => ["dmode=777", "fmode=666"]
 
    config.vm.provision :shell, :path => "bootstrap.sh"
 end
