updated docker images

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM tutum/lamp:latest
 MAINTAINER George Dawoud <george@dawouds.com>
 
 # Download latest version of ChurchCRM into /app
-RUN rm -fr /app && git clone https://github.com/ChurchCRM/CRM.git /app
+RUN rm -fr /app && git clone https://github.com/ChurchCRM/CRM.git /churchcrm && mv /churchcrm/src /app
 
 # Add database setup script
 ADD setup_mysql.sh /setup_mysql.sh
