fixed missing run

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,9 +4,9 @@ MAINTAINER George Dawoud <george@dawouds.com>
 # Download latest version of ChurchCRM into /app
 RUN rm -fr /app && git clone https://github.com/ChurchCRM/CRM.git /churchcrm && mv /churchcrm/src /app
 
-# Add database setup script
+# MySQL utils
 COPY setup_mysql.sh /setup_mysql.sh
 RUN chmod 755 /*.sh
 
 EXPOSE 80 3306
-CMD ["/run.sh"]
+CMD ["/setup_mysql.sh"]
