--- a/src/composer.json
+++ b/src/composer.json
@@ -25,6 +25,7 @@
   },
   "require": {
     "mailchimp/mailchimp": "2.0.6",
-    "slim/slim": "2.6.2"
+    "slim/slim": "2.6.2",
+    "knplabs/github-api": "~1.4"
   }
 }
