on vagrant we build the skin but never check them in...

--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,15 @@ vendor
 composer.lock
 
 # Uploaded Images
-src/Images/Family/thumbnails/
-src/Images/Person/thumbnails/
+thumbnails
 
 # SASS
 .sass-cache
+
+#skins
+adminlte
+font-awesome
+ionicons
 
 # Configuration files with passwords
 src/Include/Config.php
