--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 script: 
   - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < ./src/mysql/install/Install.sql -uroot; fi
   - tests/LineEndings.sh
-  - phpunit --configuration phpunit_$DB.xml --coverage-text
+  ##- phpunit --configuration phpunit_$DB.xml --coverage-text
 
 before_script:
   - cd ./src
