--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,10 @@ before_script:
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 script: 
-  - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < ./src/mysql/install/Install.sql -uroot; fi
+  - if [[ "$DB" == "mysql" ]]; then mysql churchcrm_test < ./mysql/install/Install.sql -uroot; fi
   - tests/LineEndings.sh
   ##- phpunit --configuration phpunit_$DB.xml --coverage-text
 
 before_script:
   - cd ./src
   - composer install
-  - cd ..
