--- a/src/.htaccess
+++ b/src/.htaccess
@@ -9,4 +9,6 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ index.php [QSA,L]
 
-php_value short_open_tag 1
+<IfModule mod_php.so>
+    php_value short_open_tag On
+</IfModule>
