--- a/build.xml
+++ b/build.xml
@@ -61,4 +61,11 @@
         <echo message="building changeset"/>
         <exec command="github_changelog_generator -t ${github.token}" dir="." passthru="true"/>
     </target>
+
+    <target name="locale-update">
+        <echo message="building messages.po"/>
+        <exec command="xgettext --from-code=UTF-8 -o locale/messages.po *.php email/*.php Include/*.php Reports/*.php sundayschool/*.php" dir="src" passthru="true"/>
+    </target>
+
+    <target name="post-release" depends="change-log, locale-update" />
 </project>
