--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
             <fileset dir="src">
                 <include name="**"/>
                 <exclude name="Images/Person/thumbnails/*.jpg"/>
+                <exclude name="Include/Config.php"/>
             </fileset>
         </copy>
 
