Cleanup Git Repo

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ src/Include/Config.php
 src/mysql/database_setup_and_install.sh
 
 target
+/src/orm/model/ChurchCRM/Base/
+/src/orm/model/ChurchCRM/Map/
