--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,9 @@
                 <include name="**"/>
                 <exclude name="Images/Person/thumbnails/*.jpg"/>
                 <exclude name="Include/Config.php"/>
+                <exclude name="vendor/almasaeed2010/**"/>
+                <exclude name="vendor/components/**"/>
+                <exclude name="vendor/driftyco/**"/>
             </fileset>
         </copy>
 
