--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,4 @@
 # Property files contain key/value pairs
-build.version=2.1.8
+build.version=2.2.9
+build.version.next=2.1.10
 github.token=64f5ebabc85c0533ed7e69f0c8ecf8c5981a1c50
