--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
             <fileset dir="src">
                 <include name="**"/>
                 <exclude name="Images/Person/thumbnails/*.jpg"/>
+                <exclude name="composer.lock"/>
                 <exclude name="Include/Config.php"/>
                 <exclude name="vendor/almasaeed2010/**"/>
                 <exclude name="vendor/components/**"/>
