--- a/build.xml
+++ b/build.xml
@@ -66,7 +66,7 @@
     <target name="rev-build-number">
         <echo message="now version ${build.version.next}"/>
         <exec command="replace '${build.version}' '${build.version.next}' -- build.properties src/composer.json" dir="." passthru="true"/>
-        <echo message="please update build.xml with the next verion file"/>
+        <echo message="please update build.properties with the next verion file"/>
     </target>
 
     <target name="change-log" depends="install-change-log">
