--- a/build.xml
+++ b/build.xml
@@ -93,6 +93,7 @@
         <then>
           <propertyprompt propertyName="demoKey" promptText="Enter the demo site hook password" />
           <exec command = "git rev-parse --abbrev-ref HEAD" outputProperty="currentBranch" />
+          <exec command = "git log --pretty=format:'%H' -n 1" outputProperty="commitHash" />
           <if>
             <not>
               <or>
@@ -104,7 +105,7 @@
                 <propertyprompt propertyName="currentBranch" defaultValue="develop" promptText="Current branch is not master or develop. Enter branch to emulate:" />
             </then>
           </if>
-          <exec command = "curl -F 'demoKey=${demoKey}' -F 'branch=${currentBranch}' -F 'fileupload=@${builddir}/ChurchCRM-${build.version}.zip' http://demo.churchcrm.io/webhooks/DemoUpdate.php" passthru="true"/>
+          <exec command = "curl -F 'demoKey=${demoKey}' -F 'branch=${currentBranch}' -F 'commitHash=${commitHash}' -F 'fileupload=@${builddir}/ChurchCRM-${build.version}.zip' http://demo.churchcrm.io/webhooks/DemoUpdate.php" passthru="true"/>
         </then>
         <else>
             <echo message="You must build the source before pushing to demo site" />
