--- a/build.xml
+++ b/build.xml
@@ -75,10 +75,12 @@
         <echo message="please update build.properties with the next verion file"/>
     </target>
 
-    <target name="change-log" depends="install-change-log">
+    <target name="update-change-log">
         <echo message="building changeset"/>
         <exec command="github_changelog_generator -t ${github.token}" dir="." passthru="true"/>
     </target>
+
+    <target name="change-log" depends="install-change-log, update-change-log" />
 
     <target name="locale-update">
         <echo message="building messages.po"/>
