--- a/src/Include/Config.php.example
+++ b/src/Include/Config.php.example
@@ -60,7 +60,7 @@ error_reporting(E_ERROR);
 // server has permission to write to this file.
 // Warning: The error_log file can grow very large over time.
 // ini_set('log_errors', 1);
-// ini_set('error_log','/tmp/churchCRM.log');
+// ini_set('error_log','/tmp/ChurchCRM.log');
 
 //
 // SETTINGS END HERE.  DO NOT MODIFY BELOW THIS LINE
