--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,7 @@
                 <include name="**"/>
                 <exclude name="Images/Person/thumbnails/*.jpg"/>
                 <exclude name="composer.lock"/>
+                <exclude name="signatures.json"/>
                 <exclude name="Include/Config.php"/>
                 <exclude name="vendor/almasaeed2010/**"/>
                 <exclude name="vendor/components/**"/>
@@ -43,7 +44,6 @@
         </copy>
         
         <echo message="Generating code signature file..."/>
-        <delete file="${sourcedir}/churchcrm/signatures.json"/>
         <exec command = "php generateSignatures.php ${sourcedir}/churchcrm" passthru="true"/>
 
 
