--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,15 @@
-# http://EditorConfig.org
+; This file is for unifying the coding style for different editors and IDEs.
+; More information at http://editorconfig.org
 
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
+indent_style = space
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 # 2 space indentation
 [*.{php,scss,js,json}]
-indent_style = space
 indent_size = 2
 charset = utf-8
