underp the autoloader for the DTO objects.

--- a/src/composer.json
+++ b/src/composer.json
@@ -49,7 +49,7 @@
       "orm/"
     ],
     "psr-4": {
-      "\\": "bin/",
+      "ChurchCRM\\dto\\": "bin/dto/",
       "ChurchCRM\\Service\\": "Service/",
       "ChurchCRM\\"  : "ChurchCRM/"
     }
