--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 #Exclude composer vendor folders
 vendor
 composer.lock
+node_modules
 
 # Uploaded Images
 thumbnails
@@ -24,6 +25,7 @@ thumbnails
 adminlte
 font-awesome
 ionicons
+fullcalendar
 
 # Configuration files with passwords
 src/Include/Config.php
