--- a/src/composer.json
+++ b/src/composer.json
@@ -49,9 +49,10 @@
       "orm/"
     ],
     "psr-4": {
-      "\\": "bin/",
-      "ChurchCRM\\Service\\": "Service/",
-      "ChurchCRM\\"  : "ChurchCRM/"
+      "\\"  : "bin/",
+      "ChurchCRM\\"  : "ChurchCRM/",
+      "ChurchCRM\\dto\\": "ChurchCRM/dto/",
+      "ChurchCRM\\Service\\": "Service/"
     }
   }
 }
