updated locale build and file

--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,7 @@
                 <exclude name="skin/adminlte/plugins/datatables/extensions/TableTools/images/psd/**"/>
             </fileset>
         </copy>
-        
+
         <echo message="Generating code signature file..."/>
         <exec command = "php generateSignatures.php ${sourcedir}/churchcrm" passthru="true"/>
 
@@ -80,11 +80,11 @@
 
     <target name="locale-update">
         <echo message="building messages.po"/>
-        <exec command="xgettext --from-code=UTF-8 -o locale/messages.po *.php email/*.php Include/*.php Reports/*.php sundayschool/*.php" dir="src" passthru="true"/>
+        <exec command="find . -iname '*.php' | xargs xgettext --from-code=UTF-8 -o locale/messages.po -L PHP" dir="src" passthru="true"/>
     </target>
 
     <target name="release" depends="locale-update, package, rev-build-number" />
-    
+
     <target name="demosite">
       <if>
         <available file="${builddir}/ChurchCRM-${build.version}.zip" />
@@ -110,5 +110,5 @@
         </else>
       </if>
     </target>
-    
+
 </project>
