--- a/src/composer.json
+++ b/src/composer.json
@@ -50,5 +50,12 @@
       "ChurchCRM\\": "ChurchCRM/",
       "ChurchCRM\\Service\\": "Service/"
     }
+  },
+  "repositories": {
+      "packagist": { 
+        "url": "https://packagist.org", 
+        "type": "composer" 
+      }
   }
+
 }
