renamed npm to locale-gen

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "scripts": {
     "install": "/vagrant/scripts/build-skin.sh",
-    "locale": "cd src && find . -iname '*.php' | grep -v ./vendor | xargs xgettext --from-code=UTF-8 -o locale/messages.po -L PHP"
+    "locale-gen": "cd src && find . -iname '*.php' | grep -v ./vendor | xargs xgettext --from-code=UTF-8 -o locale/messages.po -L PHP"
   }
 }
