--- a/build.xml
+++ b/build.xml
@@ -77,7 +77,7 @@
 
     <target name="locale-update">
         <echo message="building messages.po"/>
-        <exec command="npm run locale" dir="." passthru="true"/>
+        <exec command="npm run locale-gen" dir="." passthru="true"/>
     </target>
 
     <target name="release" depends="locale-update, package, rev-build-number" />
