--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "fullcalendar": "3.0.1"
   },
   "scripts": {
-    "install": "/vagrant/scripts/build-skin.sh",
+    "install": "/vagrant/scripts/build-skin.sh && grunt concat",
     "locale-gen": "cd src && find . -iname '*.php' | grep -v ./vendor | xargs xgettext --from-code=UTF-8 -o locale/messages.po -L PHP"
   }
 }
