moved all skin actions to Grunt

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ ionicons
 fullcalendar
 moment
 /src/skin/locale
+/src/skin/fastclick
 
 # Configuration files with passwords
 src/Include/Config.php
