--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "grunt": "~0.4.1",
     "grunt-curl": "~2.2.0",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-rename": "^0.0.3"
   },
   "dependencies": {
@@ -29,9 +31,9 @@
     "fullcalendar": "3.0.1"
   },
   "scripts": {
-    "preinstall": "grunt curl-dir",
-    "install": "/vagrant/scripts/build-skin.sh",
-    "postinstall": "grunt concat",
+    "preinstall": "grunt clean",
+    "install": "grunt curl-dir && grunt copy",
+    "postinstall": "grunt concat && grunt rename",
     "locale-gen": "cd src && find . -iname '*.php' | grep -v ./vendor | xargs xgettext --from-code=UTF-8 -o locale/messages.po -L PHP"
   }
 }
