--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-compress": "^1.0.3",
     "grunt-contrib-rename": "^0.0.3"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "preinstall": "grunt clean",
     "install": "grunt curl-dir && grunt copy",
     "postinstall": "grunt concat && grunt rename",
-    "locale-gen": "/vagrant/scripts/update-locale.sh"
+    "locale-gen": "/vagrant/scripts/update-locale.sh",
+    "package": "php generateSignatures.php src && grunt compress"
   }
 }
