--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-compress": "^1.0.3",
-    "grunt-contrib-rename": "^0.0.3"
+    "grunt-contrib-rename": "^0.0.3",
+    "node-sha1":"1.0.1"
   },
   "dependencies": {
     "admin-lte": "2.3.7",
@@ -36,7 +37,7 @@
     "install": "grunt curl-dir && grunt copy",
     "postinstall": "grunt concat && grunt rename",
     "locale-gen": "/vagrant/scripts/update-locale.sh",
-    "package": "php generateSignatures.php src && grunt compress",
+    "package": "grunt generateSignatures && grunt compress",
     "demosite": "/vagrant/scripts/demosite.sh"
   }
 }
