Grunt for All Skin & New Localization Files (#1335)
* now using grunt for build system

* using new generated locale files for full calendar

* grunt concat now part of the NPM install

* adding bootstrap-datepicker  to loacle files

* download datatables Internationalisation plug-in files

* Internationalisation plug-ins file downloads

* using correct life cycle for NPM

* fixed missing Footer.js

* re-name files to match locale

* added grunt-contrib-rename

* added locale for JS files

* added support for datatable lanagles

* moved all skin actions to Grunt

* adminlte-copy cleanup

excluded files during copy of adminlte that we build outside

* added package

* fix npm version && add demosite script

* move signature file creation to grunt

* typo!

* make JS and PHP treat forward slashes the same.  fix gruntfile

--- a/package.json
+++ b/package.json
@@ -16,6 +16,16 @@
     "url": "https://github.com/ChurchCRM/CRM/issues"
   },
   "homepage": "http://www.churchcrm.io",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-curl": "~2.2.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-compress": "^1.0.3",
+    "grunt-contrib-rename": "^0.0.3",
+    "node-sha1":"1.0.1"
+  },
   "dependencies": {
     "admin-lte": "2.3.7",
     "ionicons": "2.0.1",
@@ -23,7 +33,11 @@
     "fullcalendar": "3.0.1"
   },
   "scripts": {
-    "install": "/vagrant/scripts/build-skin.sh",
-    "locale-gen": "/vagrant/scripts/update-locale.sh"
+    "preinstall": "grunt clean",
+    "install": "grunt curl-dir && grunt copy",
+    "postinstall": "grunt concat && grunt rename",
+    "locale-gen": "/vagrant/scripts/update-locale.sh",
+    "package": "grunt generateSignatures && grunt compress",
+    "demosite": "/vagrant/scripts/demosite.sh"
   }
 }
