--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ font-awesome
 ionicons
 fullcalendar
 moment
+/src/skin/locale
+/src/skin/fastclick
 
 # Configuration files with passwords
 src/Include/Config.php
