--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-compress": "^1.0.3",
     "grunt-contrib-rename": "^0.0.3",
-    "node-sha1":"1.0.1"
+    "node-sha1": "1.0.1",
+    "grunt-poeditor-ab": "^0.1.9"
   },
   "dependencies": {
     "admin-lte": "2.3.7",
