--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   "scripts": {
     "install": "grunt clean && grunt curl-dir && grunt copy",
     "postinstall": "grunt concat && grunt rename",
-    "locale-gen": "/vagrant/scripts/update-locale.sh",
+    "locale-gen": "scripts/update-locale.sh",
     "locale-download" : "grunt poeditor",
     "package": "grunt generateSignatures && grunt compress",
-    "demosite": "/vagrant/scripts/demosite.sh",
-    "postpackage" : "/vagrant/scripts/gen-changelogs.sh && /vagrant/scripts/version-rev.sh",
+    "demosite": "scripts/demosite.sh",
+    "postpackage" : "scripts/gen-changelogs.sh && scripts/version-rev.sh",
     "orm-gen" : "src/vendor/propel/propel/bin/propel --config-dir=propel model:build "
   }
 }
