--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "install": "grunt clean && grunt curl-dir && grunt copy",
     "postinstall": "grunt concat && grunt rename",
     "locale-gen": "/vagrant/scripts/update-locale.sh",
-    "locale-download" : "grunt poeditor",
+    "locale-download" : "grunt updateFromPOeditor",
     "package": "grunt generateSignatures && grunt compress",
     "demosite": "/vagrant/scripts/demosite.sh",
     "postpackage" : "/vagrant/scripts/gen-changelogs.sh && /vagrant/scripts/version-rev.sh"
