--- a/.gitignore
+++ b/.gitignore
@@ -17,25 +17,26 @@ node_modules
 npm-debug.log*
 
 # Uploaded Images
-thumbnails
+src/Images/Family/thumbnails
+src/Images/Person/thumbnails
 
 # SASS
 .sass-cache
 
 #skins
-adminlte
-font-awesome
-ionicons
-fullcalendar
-moment
-/src/skin/locale
-/src/skin/fastclick
+src/skin/adminlte
+src/skin/font-awesome
+src/skin/ionicons
+src/skin/fullcalendar
+src/skin/moment
+src/skin/locale
+src/skin/fastclick
 
 # Configuration files with passwords
 src/Include/Config.php
 
 target
-/src/ChurchCRM/model/ChurchCRM/Base/
-/src/ChurchCRM/model/ChurchCRM/Map/
-/src/signatures.json
-/src/integrityCheck.json
+src/ChurchCRM/model/ChurchCRM/Base
+src/ChurchCRM/model/ChurchCRM/Map
+src/signatures.json
+src/integrityCheck.json
